fix(ui/meta): og:url added to meta tag and beachitt-card z-index added to fix image layout

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -108,6 +108,9 @@
   border: 1px solid black;
 }
 
+.beachitt-page {
+  z-index: 2;
+}
 .beachitt-page img {
   top: 130px;
 }
@@ -124,7 +127,7 @@
 
 .project-card:hover > .snkr-mrkt-image {
   margin-bottom: 50px;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
   padding-right: 20px;
 }
 
@@ -151,7 +154,6 @@
 
 .spudhub-image img {
   height: auto;
-  margin-top: 15px;
 }
 
 .spudhub-description {
@@ -167,6 +169,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1;
 }
 .spotify-image img {
   width: 180px;
@@ -530,6 +533,7 @@
     height: 300px;
     right: 14px;
     top: 125px;
+    z-index: 1;
   }
 
   .project-card:hover > .project-links {
